--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -24,6 +24,8 @@
     <string name="surname_hint">e.g. James</string>
     <string name="district_hint">e.g. Makonde</string>
     <string name="mother_hint">e. g. Sarah</string>
-
+    <string name="ok">ok</string>
+    <string name="lastcommit">"Version %s"</string>
+    <string name="unavailable">"Unavailable"</string>
 
 </resources>
