Reemplace edittext by spinner and remove unused graphics

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -28,4 +28,8 @@
     <string name="lastcommit">"Version %s"</string>
     <string name="unavailable">"Unavailable"</string>
 
+    <string-array name="district_list">
+        <item>""</item>
+        <item>Example</item>
+    </string-array>
 </resources>
