outside zimbabwe option added

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -91,5 +91,6 @@
         <item>Zaka</item>
         <item>Zvimba</item>
         <item>Zvishavane</item>
+        <item>Outside Zimbabwe</item>
     </string-array>
 </resources>
