--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,7 +1,7 @@
 <resources>
     <string name="app_name">UIC</string>
     <string name="mother_title">"Mother's first name"</string>
-    <string name="surname_title">Client's surname</string>
+    <string name="surname_title">"Client's surname"</string>
     <string name="district_title">District of birth</string>
     <string name="date_title">Date of birth</string>
     <string name="day_title">Day</string>
