--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -28,6 +28,7 @@
     <string name="lastcommit">"Version %s"</string>
     <string name="unavailable">"Unavailable"</string>
     <string name="default_district">Select district</string>
+    <string name="mother_info">"There's a user convention for certain situations for filling in this field (mother's name):\n  \n If mother's name is still unknown please write XX \n  \n If client refuses to provide mother's name, then please introduce ZZ \n \n If there's no mother known, then please introduce JANEDOE"    </string>
 
     <string-array name="district_list">
         <item>@string/default_district</item>
