--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -29,7 +29,15 @@
     <string name="unavailable">"Unavailable"</string>
     <string name="default_district">Select district</string>
     <string name="chk_twin">"Twin?"</string>
+    <string name="default_twin">Select district</string>
 
+    <string-array name="twin_list">
+        <item>@string/default_twin</item>
+        <item>1</item>
+        <item>2</item>
+        <item>3</item>
+        <item>4</item>
+    </string-array>
     <string-array name="district_list">
         <item>@string/default_district</item>
         <item>Beitbridge</item>
