--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -29,7 +29,7 @@
     <string name="unavailable">"Unavailable"</string>
     <string name="default_district">Select district</string>
     <string name="chk_twin">"Twin?"</string>
-    <string name="default_twin">Select district</string>
+    <string name="default_twin">Please select the twin number</string>
 
     <string-array name="twin_list">
         <item>@string/default_twin</item>
