--- a/app/src/malawi/res/values/strings.xml
+++ b/app/src/malawi/res/values/strings.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
+    <string name="app_name">Malawi UIC</string>
     <string name="mother_title">"Mother's first name"</string>
     <string name="surname_title">"Client's surname"</string>
     <string-array name="district_list">
