adding out district

--- a/app/src/malawi/res/values/strings.xml
+++ b/app/src/malawi/res/values/strings.xml
@@ -33,5 +33,6 @@
         <item>Chikwawa</item>
         <item>Nsanje</item>
         <item>Likoma</item>
+        <item>Out</item>
     </string-array>
 </resources>
