--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -11,6 +11,7 @@
     <string name="sex_male">Male</string>
     <string name="sex_female">Female</string>
     <string name="sex_transgender">Transgender</string>
+    <string name="sex_other">Other</string>
     <string name="code_title">YOUR CODE</string>
     <string name="code_copy">Copy</string>
     <string name="code_invalid">INVALID</string>
